--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link rel="shortcut icon" href="./media/cafe_logo.png" type="image/x-icon">
         <title>Cafe Amazonas-Perú</title>
     </head>
     <body>
@@ -29,7 +30,7 @@
                 <label for="check" class="checkbtn">
                     <i class="fa-solid fa-bars"></i>
                 </label>
-                <img src="./media/logo_cafe.png" width="250px" class="logo" alt="">
+                <img src="./media/logo_cafe.png" width="250px" class="logo" alt="logo_cafe">
                 <ul class="opciones">
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./pages/form.html">Contactanos</a></li>
